# ProteinPatchAnalysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_prepare_dataset.ipynb  02_train_voxel_vae.ipynb
scripts/: fetch_random_pdbs.py
src/protein_patch/: __init__.py  analysis.py  atom_types.py  augment.py  benchmark_spec.py  clean.py  comparison.py  config.py  contrastive_train.py  headline.py  patches.py  sasa.py  spec.py  voxelize.py
src/protein_patch/data/: __init__.py  attributes.py  fetch.py  prep.py
src/protein_patch/eval/: probe.py
src/protein_patch/model/: __init__.py  callbacks.py  contrastive.py  dataset.py  encoders.py  point_dataset.py  train.py  vae.py
src/protein_patch/tasks/: burial.py  identity.py  io.py  secondary_structure.py
tests/: conftest.py  test_analysis.py  test_atom_types.py  test_attributes.py  test_augment.py  test_benchmark_spec.py  test_burial.py  test_central_mask.py  test_comparison.py  test_contrastive_loss.py  test_contrastive_model.py  test_contrastive_train.py  test_dataset.py  test_encoders.py  test_fetch.py  test_headline.py  test_identity.py  test_patches.py  test_point_dataset.py  test_prep.py  test_probe.py  test_sasa.py  test_secondary_structure.py  test_spec.py  test_train.py  test_vae.py  test_vae3d.py  test_voxelize.py
