[project]
name = "protein-patch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "biopython>=1.81",
    "torch>=2.2",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: tests that require network access (deselect with -m 'not integration')"]

[tool.setuptools.packages.find]
where = ["src"]
